--- a/src/components/background.css
+++ b/src/components/background.css
@@ -7,6 +7,7 @@
 
 body{
     font-family: 'Exo', sans-serif;
+    overflow: hidden;
 }
 
 
@@ -25,14 +26,15 @@ body{
 
 
 .area{
-    background: #4e54c8; 
+    /* background: #4e54c8;  */
     background: black; 
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);   */
     width: 100%;
     height:100vh;
     z-index: -1;
     position: absolute;
-   
+
+    overflow: hidden;
 }
 
 .circles{
