updated link button names

--- a/src/components/background.css
+++ b/src/components/background.css
@@ -1,3 +1,10 @@
+/* 
+sourced from:
+Author
+Mohammad Abdul Mohaiman
+February 25, 2018 */
+
+
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
 *{
